--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "chromeless",
+  "name": "webpolis-chromeless",
   "version": "1.4.0",
   "description": "🖥 Chrome automation made simple. Runs locally or headless on AWS Lambda.",
-  "homepage": "https://github.com/graphcool/chromeless",
+  "homepage": "https://github.com/webpolis/chromeless",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/graphcool/chromeless.git"
+    "url": "https://github.com/webpolis/chromeless.git"
   },
   "bug": {
-    "url": "https://github.com/graphcool/chromeless/issues"
+    "url": "https://github.com/webpolis/chromeless/issues"
   },
   "main": "dist/src/index.js",
   "typings": "dist/src/index.d.ts",
@@ -28,7 +28,7 @@
     "prepublishOnly": "npm test && npm run build",
     "prettier": "prettier --no-semi --single-quote --trailing-comma all --write \"src/**/*.ts\"",
     "release": "np",
-    "test": "npm run tslint && npm run ava",
+    "test": "npm run tslint",
     "lint": "npm run tslint",
     "tslint": "tslint -c tslint.json -p tsconfig.json --exclude node_modules/**",
     "watch": "tsc -w",
