--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chrome-launcher": "^0.8.0",
     "chrome-remote-interface": "^0.25.1",
     "cuid": "^1.3.8",
+    "debug": "^3.1.0",
     "form-data": "^2.1.4",
     "got": "^7.1.0",
     "mqtt": "^2.9.2"
